--- a/WEB_MOTEL/WebContent/layout/olympos/template.xhtml
+++ b/WEB_MOTEL/WebContent/layout/olympos/template.xhtml
@@ -132,6 +132,7 @@
             <p:commandButton value="#{msg['button.no']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>
         </p:confirmDialog>
         <ui:include src="../../faces/login/changePassword-dialog.xhtml"/>
+        <ui:include src="../../faces/login/infoCurrUser-dlg.xhtml"/>
         <style>
             .transparent-dialog {
                 background: transparent !important;
