--- a/WEB_MOTEL/WebContent/layout/olympos/topbar.xhtml
+++ b/WEB_MOTEL/WebContent/layout/olympos/topbar.xhtml
@@ -35,7 +35,7 @@
                 <a id="" class="topbar-link Animated03 Fright" style="width: auto; min-width: 12em">
                     <span style="padding: 15px 0px 5px 10px; font-weight: bold; color: white; text-align: right; line-height: 53px;font-size: 16px">
                         <!--#{sessionScope['vsaUserToken']==null?'':sessionScope['vsaUserToken'].fullName}-->
-                        #{facesContext.externalContext.sessionMap.get('user').userName}
+                        #{facesContext.externalContext.sessionMap.get('user').fullName}
                     </span>
                 </a>
                 <a id="support" href="#" class="topbar-link Animated03 Fright topbar-items">
