--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/layout/olympos/layouttabmenu.xhtml
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/layout/olympos/layouttabmenu.xhtml
@@ -105,6 +105,11 @@
                                        href="# {facesContext.externalContext.request.contextPath}/jobtitle"><i
                                             class="fa fa-users"></i><span>Danh mục chức danh</span></a>
                                 </li>-->
+                <li id="" role="menuitem" style="display: #{sessionUtil.getUrlDisplay('/catService')? '':'none'}">
+                    <a class="menulink"
+                       href="#{facesContext.externalContext.request.contextPath}/catService"><i
+                            class="fa fa-building"></i><span>#{msg['datatable.header.catService']}</span></a>
+                </li>
                 <li id="" role="menuitem" style="display: #{sessionUtil.getUrlDisplay('/catItem')? '':'none'}">
                     <a class="menulink"
                        href="#{facesContext.externalContext.request.contextPath}/catItem"><i
